# q115-strm

./: .gitignore  README.md  config.json  console.py  console.spec  cron.py  dockerfile  job.py  lib.py  log.py  main.py  main.spec  pyproject.toml  requirements.txt  server.py  start.sh  watch.py
.github/workflows/: .yml  main.yml  pyinstall-win.yml
data/config/: 115.json  libs.json
docker/: q115strm.conf
frontend/: index.html
frontend/assets/: index-A_qiR64x.js  index-BNTBmoot.js  index-BhJhtUhE.css  index-BsMP4CtQ.css  index-C2yc2d1C.js  index-C5022TVg.css  index-CSc_g8YI.css  index-CbFbwuNb.js  index-Ck6_z-5M.js  index-D-ItpPJK.css  index-D3WJemj8.css  index-DJ5OvMFn.js  index-W39v3FUh.css  index-hHmJwpJi.js  index-yGtPj0fc.js
frontend/q115-strm/: index.html  package-lock.json  package.json
frontend/q115-strm/src/: App.vue  main.ts
frontend/q115-strm/src/assets/: main.css
frontend/q115-strm/src/components/: Home.vue  Settings.vue
