[tool.poetry]
name = "q115-strm"
version = "0.3.1"
description = "基于p115-client自动生成目录树，然后通过解析目录树生成strm文件，可以快速大批量扫盘且不会触发风控"
authors = ["qicfan <qicfan@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
p115client = "^0.0.3.8.2"
httpx = "^0.28.0"
httpx_request="^0.1"
watchdog = "^6.0.0"
flask = "^3.1.0"
python-crontab = "^3.2.0"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
